@@ -1,5 +1,10 @@
 2008-11-24  Michal Ludvig  <michal@logix.cz>
 
+	* s3cmd, s3cmd.1, S3/S3.py: Display or don't display progress meter
+	  default depends on whether we're on TTY (console) or not.
+
+2008-11-24  Michal Ludvig  <michal@logix.cz>
+
 	* s3cmd: Fixed 'get' conflict.
 	* s3cmd.1, TODO: Document 'mv' command.
 
